--- a/src/styles/blocks/additionals/icon.scss
+++ b/src/styles/blocks/additionals/icon.scss
@@ -15,8 +15,7 @@
   }
 
   &--logo {
-    color: $primary-700;
-    font-family: "Montserrat", "Arial", sans-serif;
+    font-family: "Montserrat", sans-serif;
     font-weight: 700;
     font-size: 30px;
     line-height: 100%;
@@ -24,5 +23,9 @@
     @include onTablet {
       font-size: 36px;
     }
+
+    @include hover(transform, scale(1.05));
   }
+
+  @include hover(transform, scale(1.2));
 }
