--- a/src/styles/blocks/layouts/main.scss
+++ b/src/styles/blocks/layouts/main.scss
@@ -1,10 +1,9 @@
 .main {
-
   &__content {
-    padding-block: 70px 18px;
+    padding-block: 70px 0;
 
     @include onTablet {
-      padding-block: 88px 100px;
+      padding-block: 88px 0;
     }
 
     @include onDesktop {
