--- a/src/styles/blocks/layouts/menu.scss
+++ b/src/styles/blocks/layouts/menu.scss
@@ -1,5 +1,5 @@
 .menu {
-  background-color: #1a5a4c;
+  background-color: $green;
 
   &__blur {
     background: #18181a;
@@ -38,7 +38,7 @@
       height: 1px;
       width: 100%;
       display: block;
-      background-color: rgba(255, 255, 255, 0.5);
+      background-color: #ffffff7f;
       position: absolute;
       bottom: -24px;
     }
@@ -73,12 +73,11 @@
   }
 
   &__bottom {
-    color: #fff;
-    font-size: 14px;
+    color: $white;
+    font-size: $font-size-sm;
   }
 
   &__title {
-    font-size: 14px;
     line-height: 141%;
     margin-bottom: 20px;
     font-weight: 400;
