--- a/src/styles/blocks/layouts/page.scss
+++ b/src/styles/blocks/layouts/page.scss
@@ -1,14 +1,11 @@
 .page {
   font-family: "IBM Plex Sans", sans-serif;
-
   font-size: $font-size-base;
   font-weight: 300;
   font-style: normal;
-
   line-height: 100%;
-  color: $primary-700;
+  color: $primary;
   overflow-x: hidden;
-
   scroll-behavior: smooth;
   min-width: 320px;
 
