--- a/src/styles/blocks/sections/events.scss
+++ b/src/styles/blocks/sections/events.scss
@@ -46,6 +46,8 @@
     object-fit: cover;
     object-position: center;
 
+    @include hover(transform, scale(1.05));
+
     @include onTablet {
       width: 100%;
       height: 520px;
@@ -81,13 +83,13 @@
     }
 
     &--left {
-      color: #687480;
+      color: $grey;
       text-transform: uppercase;
       font-weight: 500;
     }
 
     &--right {
-      color: #1a5a4c;
+      color: $green;
       font-weight: 700;
       line-height: 150%;
     }
@@ -101,7 +103,6 @@
     line-height: 34px;
     width: max-content;
     padding-right: 20px;
-    color: #0f0e08;
     margin-bottom: 10px;
 
     @include onTablet {
@@ -130,7 +131,7 @@
   }
 
   &__description {
-    color: #4e4e4e;
+    color: $text-grey;
     line-height: 150%;
   }
 
@@ -168,12 +169,15 @@
   }
 
   &__card-info-lecture {
+    text-align: center;
     max-width: 570px;
-    background-color: #fff;
+    background-color: $white;
     box-shadow: 0 2px 0 rgba(21, 23, 22, 0.25);
     transform: translateY(-40%);
     padding: 24px 1px 20px;
     margin-bottom: -52px;
+
+    @include hover(box-shadow, 5px 5px 15px rgba(21,23,22,0.25));
 
     @include onTablet {
       padding: 45px 55px 50px;
@@ -199,7 +203,6 @@
     font-weight: 400;
     font-size: 28px;
     line-height: 100%;
-    color: #0f0e08;
 
     @include onTablet {
       font-size: 36px;
