--- a/src/styles/reset/_sanitize.scss
+++ b/src/styles/reset/_sanitize.scss
@@ -35,20 +35,9 @@ nav li::before {
   float: left;
 }
 
-abbr[title] {
-  text-decoration: underline dotted;
-}
-
 b,
 strong {
   font-weight: bolder;
-}
-
-code,
-kbd,
-samp {
-  font-family: monospace;
-  font-size: 1em;
 }
 
 audio,
@@ -60,67 +49,16 @@ video {
   vertical-align: middle;
 }
 
-iframe {
-  border-style: none;
-}
-
 svg:not([fill]) {
   fill: currentColor;
 }
 
 button,
-input,
-select {
+input {
   margin: 0;
 }
 
 button,
-[type="button" i],
-[type="reset" i],
 [type="submit" i] {
   -webkit-appearance: button;
-}
-
-progress {
-  vertical-align: baseline;
-}
-
-[type="search" i] {
-  -webkit-appearance: textfield;
-  outline-offset: -2px;
-}
-
-dialog {
-  background-color: white;
-  border: solid;
-  color: black;
-  height: fit-content;
-  left: 0;
-  margin: auto;
-  padding: 1em;
-  position: absolute;
-  right: 0;
-  width: fit-content;
-}
-
-dialog:not([open]) {
-  display: none;
-}
-
-[aria-busy="true" i] {
-  cursor: progress;
-}
-
-[aria-disabled="true" i],
-[disabled] {
-  cursor: not-allowed;
-}
-
-[aria-hidden="false" i][hidden] {
-  display: initial;
-}
-
-[aria-hidden="false" i][hidden]:not(:focus) {
-  clip: rect(0, 0, 0, 0);
-  position: absolute;
 }
