--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -1,7 +1,8 @@
 @mixin hover($_property, $_toValue) {
   transition: #{$_property} 0.3s;
+
   &:hover {
-    #{$_property}: $_toValue;
+    #{$_property}: #{$_toValue};
   }
 }
 
@@ -50,11 +51,5 @@
 
   @include onDesktop {
     --columns: 12;
-  }
-}
-
-@mixin hover {
-  @media(any-hover: hover) {
-    @content;
   }
 }
