--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -9,32 +9,22 @@ $xlg-pad: 40px;
 $tablet-breakpoint: 768px;
 $desktop-breakpoint: 1280px;
 
-$primary-400: #60a5fa;
-$primary: #3b82f6;
-$primary-700: #0f0e08;
-$accent: #64ffda;
-$red: #f43f5e;
-$red-600: #dc2626;
-$yellow: #eab308;
-$grey: #f7f7f9;
+$primary: #0f0e08;
+$grey: #687480;
+$text-grey: #4e4e4e;
+$green: #1a5a4c;
+$orange: #f14a27;
+
 $white: #fff;
 $black: #000;
 
-$text: rgba(0, 0, 0, 0.8);
-$secondary: rgba(0, 0, 0, 0.54);
-$disabled: rgba(0, 0, 0, 0.38);
-$dividers: rgba(0, 0, 0, 0.12);
-
-$link-color: $primary;
-$link-hover-color: $primary-700;
-
 $sans-serif: "Helvetica Neue", "Arial", sans-serif;
-$serif: "Georgia", "Times", "Times New Roman", serif;
-$monospace: "Menlo", "Monaco", "Consolas", "Courier New", monospace;
+
 $font-family: $sans-serif;
 
 $font-size-base: 16px;
 $font-size-sm: 14px;
+
 $font-size-h1: 40px;
 $font-size-h2: 32px;
 $font-size-h3: 28px;
@@ -42,5 +32,3 @@ $font-size-h4: 24px;
 $font-size-h5: 20px;
 $font-size-h6: 16px;
 $line-height-base: 1.5;
-
-$border: 1px solid $dividers;
