--- a/src/styles/blocks/layouts/footer.scss
+++ b/src/styles/blocks/layouts/footer.scss
@@ -16,6 +16,7 @@
     @include onTablet {
       grid-column: 1 / 2;
       flex-direction: column;
+      justify-content: flex-start;
     }
 
   }
@@ -35,7 +36,6 @@
 
   &__schedule-title,
   &__contact-title {
-    color: #0f0e08;
     font-size: 14px;
     font-weight: 400;
     line-height: 141%;
@@ -58,7 +58,7 @@
     position: relative;
     height: 1px;
     width: 100%;
-    background-color: rgba(26, 90, 76, 0.5);
+    background-color: $green;
     grid-column: 1/3;
     transform: rotate(0deg);
     justify-self: center;
@@ -70,7 +70,7 @@
       width: 50px;
       height: 50px;
       border-radius: 50%;
-      border: 1px solid #1a5a4c;
+      border: 1px solid $green;
       right: 0;
       bottom: 100%;
       margin-bottom: 20px;
@@ -126,10 +126,11 @@
     justify-content: space-between;
     grid-column: 1 / 3;
 
-    color: #0f0e08;
     font-size: 14px;
     font-weight: 400;
     line-height: 100%;
+
+    @include hover(color, $orange);
   }
 
   &__list-about {
@@ -154,7 +155,6 @@
     font-weight: 300;
     font-size: 12px;
     line-height: 141%;
-    color: #0f0e08;
 
     @include onTablet {
       padding-top: 120px;
