--- a/src/styles/reset/_base.scss
+++ b/src/styles/reset/_base.scss
@@ -1,32 +1,12 @@
 main,
 header,
-footer,
-article,
-aside,
-details,
-summary {
+footer {
   margin: 0 auto;
   width: 100%;
 }
 
-details > summary:first-of-type {
-  display: list-item;
-}
-
 footer p {
   margin-bottom: 0;
-}
-
-hr {
-  border: $border;
-  display: block;
-  margin-top: $sm-pad;
-  margin-bottom: $sm-pad;
-  width: 100%;
-  box-sizing: content-box;
-  height: 0;
-  overflow: visible;
-  color: inherit;
 }
 
 img {
