--- a/src/styles/reset/_forms.scss
+++ b/src/styles/reset/_forms.scss
@@ -1,44 +1,12 @@
 input[type="email"]:focus, {
   background-color: $white;
-  border-color: $primary-400;
+  border-color: $primary;
   outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(59, 130, 246, 0.5);
-}
-
-input[type="checkbox"],
-input[type="radio"] {
-  box-sizing: border-box;
-  padding: 0;
-  display: inline;
-}
-
-input[type="file"]:focus,
-input[type="radio"]:focus,
-input[type="checkbox"]:focus {
-  outline: 1px solid $dividers;
 }
 
 input[type="email"][disabled] {
-  background-color: $dividers;
-  color: $secondary;
+  background-color: $white;
+  color: $primary;
   cursor: not-allowed;
   opacity: 1;
-}
-
-input:focus:invalid,
-textarea:focus:invalid,
-select:focus:invalid {
-  border-color: $red-600;
-  color: $red;
-}
-
-input[type="file"]:focus:invalid:focus,
-input[type="radio"]:focus:invalid:focus,
-input[type="checkbox"]:focus:invalid:focus {
-  outline-color: $red;
-}
-
-label {
-  display: inline-block;
-  line-height: 2;
 }
