add script to the main.js file

--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,6 @@
-$c-gray: #eee;
+$blackAccent: #0f0e08;
+$greenAccent: #1a5a4c;
+$grayAccent: #687480;
+$textColor: #4e4e4e;
+$redAccent: #f14a27;
+$radioBtnColor: #e0e0e0;
