--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,10 @@
-%h1 {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
+%h1-h2 {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  line-height: 100%;
+}
+
+%header-link {
+  font-family: "IBM Plex Sans", sans-serif;
+  line-height: 100%;
 }
