Add some changes

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -51,7 +51,7 @@
     gap: 20px;
 
     @include onTablet {
-      grid-column: 2 / -2;
+      grid-column: 2 / -1;
       margin: 0;
     }
 
@@ -146,7 +146,9 @@
     color: $blackAccent;
     font-size: 14px;
 
-    @include hover(font-size, 18px);
+    @include onDesktop {
+      @include hover(font-size, 18px);
+    }
 
     &:after {
       background-color: $blackAccent;
@@ -201,6 +203,8 @@
     border: 1px solid $greenAccent;
     border-radius: 100%;
 
-    @include scale(1.2);
+    @include onDesktop {
+      @include scale(1.2);
+    }
   }
 }
