--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -3,7 +3,9 @@
   width: 24px;
   height: 24px;
 
-  @include scale(1.5);
+  @include onDesktop {
+    @include scale(1.5);
+  }
 
   &--up {
     background-image: url("../images/icons/arrow-up.svg");
