--- a/src/styles/blocks/square-button.scss
+++ b/src/styles/blocks/square-button.scss
@@ -18,7 +18,9 @@
   &--subscription {
     background-color: $redAccent;
 
-    @include hover (box-shadow, 0 0 20px 10px rgba(241, 74, 39, 0.5));
-    @include scale(1.2);
+    @include onDesktop {
+      @include hover (box-shadow, 0 0 20px 10px rgba(241, 74, 39, 0.5));
+      @include scale(1.2);
+    }
   }
 }
