--- a/src/styles/blocks/text-link.scss
+++ b/src/styles/blocks/text-link.scss
@@ -6,9 +6,16 @@
   line-height: 150%;
   color: $blackAccent;
 
-  @include hover(font-weight, 600);
+  @include onDesktop {
+    @include hover(font-weight, 600);
+  }
 
   &:hover {
     text-decoration: underline;
+  }
+
+  &__name {
+    font-style: italic;
+    font-weight: 700;
   }
 }
