--- a/src/styles/blocks/from-classicism-to-romanticism.scss
+++ b/src/styles/blocks/from-classicism-to-romanticism.scss
@@ -28,7 +28,7 @@
     transform: translate(-50%);
 
     background-color: $from-classicism-to-romanticism-background-color;
-    box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
+    box-shadow: 0 2px 0 #1a5a4c40;
 
     display: flex;
     flex-direction: column;
