--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -2,16 +2,6 @@
   background-color: $menu-background-color;
   color: $menu-text-color;
 
-  padding-block: 27px;
-
-  @include onTable() {
-    padding-block: 40px;
-  }
-
-  @include onDesktop() {
-    padding-bottom: 48px;
-  }
-
   // overflow: auto; /* to scroll the menu if needed */
 
   &::after {
@@ -21,20 +11,27 @@
     top: 100%;
     left: 0;
     right: 0;
-    background-color: rgba(0, 0, 0, 0.5); /* Прозорість тла */
+    background-color: rgba(0, 0, 0, 0.5);
   }
 
   &__content {
     @include contentPaddingInline();
+    padding-block: 27px;
 
     @include onTable() {
       display: flex;
       justify-content: space-between;
+
+      padding-block: 40px;
+    }
+
+    @include onDesktop() {
+      padding-bottom: 48px;
     }
   }
 
   &__break-line {
-    background: rgba(255, 255, 255, 0.5);
+    background: $menu-break-line-color;
 
     width: 100%;
     height: 1px;
