--- a/src/styles/blocks/schedule.scss
+++ b/src/styles/blocks/schedule.scss
@@ -1,9 +1,8 @@
-.schedulee {
+.schedule {
   font-size: 14px;
   line-height: 150%;
 
   &__title {
-    font-size: 14px;
     line-height: 140%;
     margin-bottom: 20px;
   }
@@ -16,7 +15,12 @@
     @include onTable() {
       flex-direction: row;
       column-gap: 38px;
+
+      &--onTable-direction--column {
+        flex-direction: column;
+      }
     }
+
   }
 
   &__item {
