--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,7 +5,7 @@
 @import "blocks/header";
 @import "blocks/menu";
 @import "blocks/nav";
-@import "blocks/schedulee";
+@import "blocks/schedule";
 @import "blocks/art-museum";
 @import "blocks/main";
 @import "blocks/button";
@@ -18,6 +18,9 @@
 @import "blocks/from-classicism-to-romanticism";
 @import "blocks/gallery";
 @import "blocks/subscribe";
+@import "blocks/footer";
+@import "blocks/contact-us";
+@import "blocks/copy-right";
 
 .body {
   margin: 0;
