--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -10,6 +10,7 @@ $header-text-color: #fff;
 //menu
 $menu-background-color: $page-main-color;
 $menu-text-color: #fff;
+$menu-break-line-color: #ffffff80;
 
 //art-museum
 $art-museum-label-color: #0f0e08;
@@ -38,6 +39,10 @@ $from-classicism-to-romanticism-background-color: #fff;
 $subscribe-title-color: #fff;
 $subscribe-text-color: #fff;
 $subscribe-input-color: #687480;
+
+//footer
+$footer-border-top-icon: $page-main-color;
+$footer-break-line-color: #1a5a4c80;
 
 // Adapt the page
 $desktop-min-width: 1280px;
