add hover and href for all buttons and link

--- a/src/styles/blocks/art-museum.scss
+++ b/src/styles/blocks/art-museum.scss
@@ -63,6 +63,8 @@
     max-width: 450px;
     margin: 0 auto;
 
+    @include hover(transform, scale(1.2));
+
     @include onTable() {
       margin: 0;
     }
