--- a/src/styles/blocks/article.scss
+++ b/src/styles/blocks/article.scss
@@ -6,6 +6,8 @@
     width: 100%;
     display: block;
 
+    @include hover(transform, scale(1.03));
+
     @include onTable() {
       grid-column: span 6;
     }
