--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -23,6 +23,8 @@
   width: 24px;
   height: 24px;
 
+  @include hover(transform, scale(1.2));
+
   background-image: url(../images/icons/icon-menu.png);
 }
 
@@ -30,5 +32,18 @@
   width: 24px;
   height: 24px;
 
+  @include hover(transform, scale(1.2));
+
   background-image: url(../images/icons/icon-menu-close.png);
+}
+
+.logo {
+  width: 55px;
+  height: 61px;
+
+  @include hover(transform, scale(1.2));
+
+  background-image: url(../images/logo/logo.png);
+  background-position: center ;
+  background-repeat: no-repeat;
 }
