--- a/src/styles/blocks/contact-us.scss
+++ b/src/styles/blocks/contact-us.scss
@@ -6,4 +6,14 @@
     line-height: 140%;
     margin-bottom: 20px;
   }
+
+  &__list {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+  }
+
+  &__link {
+    @include hoverUnderline(#0f0e08);
+  }
 }
