--- a/src/styles/blocks/copy-right.scss
+++ b/src/styles/blocks/copy-right.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   gap: 10px;
 
-  color: #0f0e08;
+  color: $copy-right-text-color;
   text-align: center;
   font-size: 12px;
   font-weight: 300;
