--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -31,7 +31,7 @@
   }
 
   &__break-line {
-    background: $menu-break-line-color;
+    background: rgba(255, 255, 255, 0.5);
 
     width: 100%;
     height: 1px;
