--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -16,4 +16,16 @@
     row-gap: 24px;
     grid-template-columns: repeat(2, 1fr);
   }
+
+  &__item {
+    display: flex;
+  }
+
+  &__link {
+    @include hoverUnderline(#fff);
+
+    &--hover-under-line--second-color {
+      @include hoverUnderline(#0f0e08);
+    }
+  }
 }
