--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -44,6 +44,9 @@ $subscribe-input-color: #687480;
 $footer-border-top-icon: $page-main-color;
 $footer-break-line-color: #1a5a4c80;
 
+//copy-right
+$copy-right-text-color: #0f0e08;
+
 // Adapt the page
 $desktop-min-width: 1280px;
 $table-min-width: 768px;
