--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -29,12 +29,16 @@
     width: 24px;
     height: 24px;
 
+    @include hover(transform, scale(1.2));
+
     background-image: url(../images/icons/icon-facebook.svg);
   }
 
   &__instagram-icon {
     width: 24px;
     height: 24px;
+
+    @include hover(transform, scale(1.2));
 
     background-image: url(../images/icons/icon-instagram.svg);
   }
@@ -72,6 +76,8 @@
     background-image: url(../images/icons/icon-arrow-top.svg);
     background-repeat: no-repeat;
     background-position: center;
+
+    @include hover(background-color, #1a5a4c80);
 
     width: 50px;
     height: 50px;
