--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -7,12 +7,20 @@
   text-transform: uppercase;
 
   @include onTablet {
-    font-size: 54px;
+    font-size: 44px;
     line-height: 1.2em;
     text-align: left;
   }
 
+  @include onAvarageTablet {
+    font-size: 54px;
+  }
+
   @include onDesktop {
+    font-size: 56px;
+  }
+
+  @include onAvarageDesktop {
     font-size: 72px;
   }
 }
