--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -4,8 +4,20 @@
   }
 }
 
+@mixin onAvarageTablet {
+  @media (min-width: $tablet-avarage-width) {
+    @content;
+  }
+}
+
 @mixin onDesktop {
   @media (min-width: $desktop-min-width) {
+    @content;
+  }
+}
+
+@mixin onAvarageDesktop {
+  @media (min-width: $desktop-avarage-width) {
     @content;
   }
 }
@@ -18,7 +30,7 @@
   }
 
   @include onDesktop() {
-    max-width: $desktop-max-width;
+    max-width: $desktop-avarage-width;
     margin-inline: auto;
     padding-inline: $desktop-padding-inline;
   }
