--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -1,7 +1,8 @@
 $mobile-min-width: 320px;
 $tablet-min-width: 640px;
+$tablet-avarage-width: 768px;
 $desktop-min-width: 1024px;
-$desktop-max-width: 1280px;
+$desktop-avarage-width: 1280px;
 
 $mobile-logo-width: 55px;
 $mobile-logo-height: 61px;
