--- a/src/styles/blocks/layouts/header.scss
+++ b/src/styles/blocks/layouts/header.scss
@@ -11,12 +11,11 @@
     top: 0;
     left: 0;
     right: 0;
-    min-width: $mobile-min-width - 2 * $mobile-padding-inline;
-    padding-block: 27px;
-    z-index: 1;
+    width: 100%;
+    padding-top: 27px;
 
     @include onTablet {
-      padding-block: 40px;
+      padding-top: 40px;
     }
   }
 
@@ -61,7 +60,6 @@
     @include onTablet {
       grid-column: 4 / 7;
       order: 1;
-      min-height: 100vh;
       margin-inline: 0;
       margin-right: -$tablet-padding-inline;
     }
@@ -70,51 +68,58 @@
       grid-column: 6 / 13;
       margin-right: -$desktop-padding-inline;
     }
+
+    @include onAvarageDesktop {
+      margin-right: calc(-100vw / 2 + #{$desktop-avarage-width / 2} - #{$desktop-padding-inline });
+    }
   }
 
   &__image {
     display: block;
     width: 100%;
     height: 100%;
+    aspect-ratio: 320 / 300;
     object-fit: cover;
+
+    @include onTablet {
+      aspect-ratio: 374 / 384;
+    }
+
+    @include onDesktop {
+      max-height: 655px;
+      aspect-ratio: 725 / 655;
+    }
   }
 
   &__bottom {
     grid-column: 1 / -1;
     position: relative;
-    display: flex;
-    flex-direction: column;
     margin-top: 20px;
 
     @include onTablet {
       grid-column: 1 / 4;
-      padding-inline: 0;
-      margin-top: 128px;
+      display: grid;
+      align-items: center;
+      margin-top: 104px;
     }
 
     @include onDesktop {
       grid-column: 1 / 6;
-      margin-top: 208px;
+      justify-items: end;
     }
   }
 
   &__title {
     @extend %h1;
-    word-wrap: break-word;
+    word-break: break-word;
   }
 
   &__button {
     margin-top: 20px;
-
     text-transform: uppercase;
 
     @include onTablet {
-      margin-top: 38px;
-    }
-
-    @include onDesktop {
-      margin-top: 89px;
-      margin-left: auto;
+      margin-top: 0;
     }
   }
 
