--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,6 +15,8 @@
 @import "blocks/event-description";
 @import "blocks/from-classicism-to-romanticism";
 @import "blocks/gallery";
+@import "blocks/slider";
+@import "blocks/img-grid";
 @import "blocks/subscribe";
 @import "blocks/footer";
 @import "blocks/contact-us";
