Add slider gallery on mobile and tablet

--- a/src/styles/blocks/description-lection.scss
+++ b/src/styles/blocks/description-lection.scss
@@ -1,7 +1,7 @@
 .description-lection {
   padding-block: 20px;
 
-  background-color: #fff;
+  background-color: $main-bg-color;
   box-shadow: 0 2px 0 0 #1a5a4c40;
 
   @include onTablet {
