--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -108,7 +108,7 @@
     margin-bottom: 40px;
 
     border-color: $secondary-color;
-    opacity: 0.5;
+    opacity: $half-transparent;
 
     @include onTablet {
       grid-column: 2 / -2;
