--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -47,7 +47,7 @@
   &__link {
 
     text-decoration: none;
-    color: #fff;
+    color: $main-bg-color;
 
     &--color--main {
       color: $main-color;
