--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -5,7 +5,7 @@
   background-size: cover;
   background-position-x: center;
   text-align: center;
-  color: #fff;
+  color: $main-bg-color;
 
   @include onTablet {
     background-image: url(../images/subscription-bg.png);
