--- a/src/styles/blocks/field.scss
+++ b/src/styles/blocks/field.scss
@@ -42,7 +42,7 @@
 
     &:-webkit-autofill {
       -webkit-text-fill-color: $main-color;
-      box-shadow: inset 0 0 0 35px #fff;
+      box-shadow: inset 0 0 0 35px $main-bg-color;
     }
   }
 
