--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -2,7 +2,7 @@
   height: auto;
   padding-block: $mobile-menu-paddings;
 
-  color: #fff;
+  color: $main-bg-color;
   background-color: $secondary-color;
 
   @include onTablet {
@@ -41,7 +41,8 @@
 
   &__divider {
     grid-column: 1 / -1;
-    border-color: #ffffff80;
+    border-color: $main-bg-color;
+    opacity: $half-transparent;
 
     @include onTablet {
       position: absolute;
@@ -76,8 +77,8 @@
     height: 100vh;
     width: 100%;
 
-    background: #000;
-    opacity: 0.5;
+    background-color: $transparency-bg-color;
+    opacity: $half-transparent;
 
     @include onTablet {
       margin-top: $tablet-menu-paddings;
