--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,34 @@
-$c-gray: #eee;
+$zero: 0;
+$br: 4px;
+$xs-pad: 4px;
+$sm-pad: 8px;
+$md-pad: 16px;
+$lg-pad: 20px;
+$xlg-pad: 40px;
+
+$tablet-breakpoint: 768px;
+$desktop-breakpoint: 1280px;
+
+$primary: #0f0e08;
+$grey: #687480;
+$text-grey: #4e4e4e;
+$green: #1a5a4c;
+$orange: #f14a27;
+
+$white: #fff;
+$black: #000;
+
+$sans-serif: "Helvetica Neue", "Arial", sans-serif;
+
+$font-family: $sans-serif;
+
+$font-size-base: 16px;
+$font-size-sm: 14px;
+
+$font-size-h1: 40px;
+$font-size-h2: 32px;
+$font-size-h3: 28px;
+$font-size-h4: 24px;
+$font-size-h5: 20px;
+$font-size-h6: 16px;
+$line-height-base: 1.5;
