--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -14,6 +14,10 @@
   &--menu {
     margin: 27px 20px;
     background-image: url(../images/icons/menu.svg);
+
+    @include onTablet {
+      margin: 39px 34px;
+    }
   }
 
   &--close {
