--- a/src/styles/blocks/lecture.scss
+++ b/src/styles/blocks/lecture.scss
@@ -3,6 +3,11 @@
   &--image {
     display: flex;
     width: 100%;
+
+    @include onTablet {
+      box-sizing: border-box;
+      padding-inline: 34px;
+    }
   }
 
   &--content {
@@ -21,6 +26,16 @@
     margin-inline: auto;
     left: 0;
     right: 0;
+
+    @include onTablet {
+      width: auto;
+      margin-inline: 99px;
+      bottom: -120px;
+      top: 306px;
+      justify-content: left;
+      padding-inline: 55px;
+      column-gap: 140px;
+    }
   }
 
   &--name {
@@ -29,6 +44,10 @@
     font-weight: 500;
     line-height: 100%;
     align-self: center;
+
+    @include onTablet {
+      font-size: 14px;
+    }
   }
 
   &--date {
@@ -37,6 +56,10 @@
     font-weight: 700;
     line-height: 150%;
     align-self: center;
+
+    @include onTablet {
+      font-size: 14px;
+    }
   }
 
   &--title {
@@ -47,5 +70,10 @@
     line-height: 100%;
     text-align: center;
     margin-top: 20px;
+
+    @include onTablet {
+      font-size: 36px;
+      text-align: left;
+    }
   }
 }
