--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -3,11 +3,30 @@
   background-color: $background-color;
   overflow: auto;
   font-family: 'IBM Plex Sans', sans-serif;
+  padding-inline: 34px;
+  padding-top: 39px;
+
+  &__content {
+    @include onTablet {
+      @include pageGrid;
+      grid-column: 1/-1;
+    }
+  }
 
   &__info {
     color: #fff;
     font-size: 14px;
     font-weight: 400;
     line-height: 150%;
+
+    @include onTablet {
+      grid-column: -4/-1;
+    }
+  }
+
+  &__nav {
+    @include onTablet {
+      grid-column: 1/4;
+    }
   }
 }
