--- a/src/styles/blocks/section.scss
+++ b/src/styles/blocks/section.scss
@@ -9,5 +9,10 @@
     line-height: 100%;
 
     margin-bottom: 40px;
+
+    @include onTablet {
+      margin-bottom: 48px;
+      text-align: left;
+    }
   }
 }
