--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -19,6 +19,11 @@
 
     margin-bottom: 20px;
     padding-top: 88px;
+
+    @include onTablet {
+      font-size: 48px;
+      margin-bottom: 16px;
+    }
   }
 
   &__description {
@@ -29,6 +34,11 @@
     line-height: 150%;
 
     margin-bottom: 50px;
+
+    @include onTablet {
+      line-height: 100%;
+      margin-bottom: 64px;
+    }
   }
 
   &__form {
@@ -38,6 +48,12 @@
 
     height: 50px;
     margin-bottom: 88px;
+
+    @include onTablet {
+      margin-bottom: 82px;
+      height: 70px;
+      padding-inline: 154px;
+    }
 
     &--email {
       width: 100%;
@@ -54,6 +70,7 @@
   }
 
   &__button {
+    display: block;
     width: 50px;
     background-color: $rectangle-color;
     border: none;
@@ -69,6 +86,11 @@
       cursor: pointer;
       background-color: $background-color;
       background-image: url("/images/icons/arrow.svg");
+    }
+
+    @include onTablet {
+      padding: 15px 40px;
+      margin-left: 16px;
     }
   }
 }
