--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -21,12 +21,16 @@
   padding-inline: 20px;
 
   @include onTablet {
-    padding-inline: 39px;
+    padding-inline: 34px;
   }
 
   @include onDesktop {
     padding-inline: 55px;
   }
+}
+
+@mixin transition() {
+  transition: all 500ms;
 }
 
 @mixin pageGrid {
