--- a/src/styles/blocks/exhibition.scss
+++ b/src/styles/blocks/exhibition.scss
@@ -4,6 +4,10 @@
     width: 100%;
     grid-column: 1/-1;
     margin-bottom: 20px;
+
+    @include onTablet {
+      margin-bottom: 44px;
+    }
   }
 
   &--name {
@@ -14,6 +18,11 @@
     font-weight: 500;
     line-height: 100%;
     align-self: center;
+
+    @include onTablet {
+      grid-column: span 1;
+      font-size: 14px;
+    }
   }
 
   &--date {
@@ -22,6 +31,11 @@
     font-weight: 700;
     line-height: 150%;
     align-self: center;
+
+    @include onTablet {
+      grid-column: span 2;
+      font-size: 14px;
+    }
 
   }
 
@@ -36,6 +50,12 @@
     line-height: 100%;
 
     margin-block: 15px 11px;
+
+    @include onTablet {
+      grid-column: 1/-1;
+      font-style: 36px;
+      margin-block: 32px 15px;
+    }
 
     &::after {
       position: absolute;
@@ -58,5 +78,12 @@
     line-height: 150%;
 
     margin-bottom: 60px;
+
+    @include onTablet {
+      grid-column: span 4;
+      margin-bottom: 64px;
+    }
   }
+
+
 }
