--- a/src/styles/blocks/info.scss
+++ b/src/styles/blocks/info.scss
@@ -1,16 +1,6 @@
 .info {
   position: relative;
 
-  &--title {
-    line-height: 140%;
-    font-weight: 400;
-    padding-block: 50px 20px;
-  }
-
-  &--schedule {
-    padding-bottom: 16px;
-  }
-
   &::before {
     content: '';
     background-color: #fff;
@@ -19,5 +9,43 @@
     display: block;
     top: 24px;
     position: absolute;
+
+    @include onTablet {
+      width: 1px;
+      height: 100%;
+      left: -38px;
+      top: 0;
+    }
+  }
+
+  @include onTablet {
+    @include pageGrid;
+
+    &--title {
+      grid-column: 1/-1;
+    }
+
+    &--schedule {
+      grid-column: 1/4;
+    }
+
+    &--addition {
+      grid-column: 4/-1;
+    }
+  }
+
+  &--title {
+    line-height: 140%;
+    font-weight: 400;
+    padding-block: 50px 20px;
+
+    @include onTablet {
+      padding-block: 0;
+    }
+
+  }
+
+  &--schedule {
+    padding-bottom: 16px;
   }
 }
