fix problem with hover underline add set max-width for tiсkets 350px

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -52,7 +52,7 @@
     }
 
     @include onDesktop() {
-      grid-column: 3 / span 4;
+      grid-column: 3 / span 3;
     }
   }
 
@@ -102,6 +102,7 @@
 
     @include onTable() {
       grid-column: 2 / span 4;
+      margin-block: 64px;
     }
 
     @include onDesktop() {
