--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -1,6 +1,7 @@
 .nav {
   display: flex;
   column-gap: 28px;
+  align-items: flex-start;
 
   @include onTable() {
     column-gap: 38px;
@@ -18,7 +19,7 @@
   }
 
   &__item {
-    display: flex;
+    width: max-content;
   }
 
   &__link {
