add hover for img-grid

--- a/src/styles/blocks/img-grid.scss
+++ b/src/styles/blocks/img-grid.scss
@@ -7,6 +7,9 @@
 
     &__item {
       width: 100%;
+
+      @include hover(transform, scale(1.1));
+
       &--01 {
         grid-column: span 4;
       }
