--- a/src/styles/blocks/layouts/nav.scss
+++ b/src/styles/blocks/layouts/nav.scss
@@ -33,6 +33,8 @@
     font-size: 16px;
     font-weight: 500;
 
+    @include hover(color, $primary);
+
     @include onDesktop {
       font-size: 22px;
       line-height: 100%;
