--- a/src/styles/blocks/layouts/page.scss
+++ b/src/styles/blocks/layouts/page.scss
@@ -5,7 +5,6 @@
   font-style: normal;
   line-height: 100%;
   color: $primary;
-  overflow-x: hidden;
   scroll-behavior: smooth;
   min-width: 320px;
 
@@ -25,6 +24,18 @@
       opacity: 1;
       transform: translateY(0);
       pointer-events: all;
+    }
+
+    &:target body {
+      overflow: hidden;
+    }
+  }
+
+  &__body {
+    overflow-x: hidden;
+
+    &--with-menu {
+      overflow: hidden;
     }
   }
 }
