--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -18,6 +18,10 @@
     @include onTablet {
       margin: 39px 34px;
     }
+
+    @include onDesktop {
+      margin-left: 55px;
+    }
   }
 
   &--close {
