--- a/src/styles/blocks/info.scss
+++ b/src/styles/blocks/info.scss
@@ -16,6 +16,10 @@
       left: -38px;
       top: 0;
     }
+
+    @include onDesktop {
+      left: -102px;
+    }
   }
 
   @include onTablet {
@@ -34,13 +38,27 @@
     }
   }
 
+  @include onDesktop {
+    &--title {
+      grid-column: 1/6;
+    }
+
+    &--schedule {
+      grid-column: 1/6;
+    }
+
+    &--addition {
+      grid-column: 6/-3;
+    }
+  }
+
   &--title {
     line-height: 140%;
     font-weight: 400;
     padding-block: 50px 20px;
 
     @include onTablet {
-      padding-block: 0;
+      padding-block: 0 20px;
     }
 
   }
