--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -5,10 +5,14 @@
     list-style: none;
     display: flex;
     flex-direction: row;
-    row-gap: 28px;
-    column-gap: 24px;
+    row-gap: 24px;
+    column-gap: 28px;
     flex-wrap: wrap;
     justify-content: center;
+
+    @include onTablet {
+      column-gap: 20px;
+    }
 
   }
   &__link {
