--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -89,7 +89,8 @@
     }
 
     @include onTablet {
-      padding: 15px 40px;
+      width: 70px;
+      padding: 24px;
       margin-left: 16px;
     }
   }
