--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,18 +1,31 @@
 .header {
   position: relative;
   box-sizing: border-box;
-  height: fit-content;
+  @include pageGrid;
   grid-column: 1 / -1;
-
-  background-image: url("/images/header-img.png");
-  background-repeat: no-repeat;
-  background-size: contain;
+  row-gap: 20px;
   margin-bottom: 70px;
 
   @include onTablet {
-    height: fit-content;
-    background-size: contain;
-    background-position: right bottom;
+    margin-bottom: 88px;
+  }
+
+  @include onDesktop {
+    margin-bottom: 200px;
+  }
+
+  &__img {
+    grid-column: 1/-1;
+    height: 100%;
+    width: 100%;
+
+    @include onTablet {
+      grid-column: -4/-1;
+    }
+
+    @include onDesktop {
+      grid-column: 5/-1;
+    }
   }
 
   &__logo {
@@ -27,74 +40,94 @@
       top: 15px;
       left: 55%;
     }
+
+    @include onDesktop {
+      height: 72px;
+      left: 50%;
+    }
   }
 
-  &__bottom {
-    box-sizing: border-box;
-    @include pageGrid;
-    @include constentPaddinInline;
-    row-gap: 20px;
-    margin-top: 100%;
-
-    @include onTablet {
-      row-gap: 38px;
-      margin: 20% 0 19px;
-    }
-
-    &--title {
-      height: fit-content;
+    &__title {
+      @include constentPaddinInline;
       font-family: 'Montserrat', sans-serif;
       font-weight: 700;
       line-height: 100%;
       font-size: 45px;
       text-align: center;
-      max-width: 100%;
       grid-column: 1 / -1;
 
       @include onTablet {
-        grid-column: span 3;
+        grid-column: 1 / 3;
+        grid-row: 1/2;
 
         line-height: 120%;
         text-align: left;
+
+        margin-top: 50%;
+      }
+
+      @include onDesktop {
+        grid-column: 1/5;
+        font-size: 60px;
+        margin-top: 40%;
       }
     }
 
-    &--tickets-link {
-      box-sizing: border-box;
-      position: relative;
+    &__link {
+      grid-column: 1/-1;
+      @include constentPaddinInline;
       height: 50px;
-      width: 70vw;
-      text-decoration: none;
-      color: $main-title-color;
       font-family: 'IBM Plex Sans', sans-serif;
       font-size: 16px;
       font-weight: 500;
       line-height: 100%;
-      padding-block: 18px;
-      text-align: center;
-
-
-      border: 1px solid $background-color;
-
-      &::after {
-        position: absolute;
-        content: '';
-        background-color: $background-color;
-        width: 50px;
-        height: 49px;
-        top: 0;
-        right: -50px;
-
-        background-image: url("/images/icons/arrow.svg");
-        background-repeat: no-repeat;
-        background-size: 24px;
-        background-position: center;
-      }
 
       @include onTablet {
-        width: auto;
-        grid-column: 1/3;
+        grid-column: 1/4;
+        grid-row: 1/-1;
+        margin-top: 70%;
+        display: flex;
+        width: 269px;
+        height: 70px;
+        align-items: center;
+        gap: 67px;
+      }
+
+      @include onDesktop {
+        grid-column: 2/5;
+        margin-top: 110%;
+      }
+
+      &-tickets {
+        border: 1px solid $background-color;
+        padding-block: 17px;
+        padding-inline: 80px;
+        display: flex;
+        box-sizing: border-box;
+
+        position: relative;
+        text-decoration: none;
+        color: $main-title-color;
+        text-align: center;
+
+        @include onTablet {
+          padding-inline: 68px;
+        }
+
+        &::after {
+          position: absolute;
+          content: '';
+          background-color: $background-color;
+          width: 50px;
+          height: 50px;
+          top: 0;
+          right: 0;
+
+          background-image: url("/images/icons/arrow.svg");
+          background-repeat: no-repeat;
+          background-size: 24px;
+          background-position: center;
+        }
       }
     }
-  }
 }
