--- a/src/styles/blocks/icons.scss
+++ b/src/styles/blocks/icons.scss
@@ -3,6 +3,10 @@
   justify-content: space-between;
   align-items: center;
 
+  @include onTablet {
+    display: block;
+  }
+
   &__social {
     display: flex;
     gap: 20px;
@@ -11,7 +15,7 @@
       display: block;
       height: 24px;
       width: 24px;
-      
+
       @include transition;
 
       &:hover {
@@ -25,6 +29,10 @@
 
     &:hover {
       transform: scale(120%);
+    }
+
+    @include onTablet {
+      margin-bottom: 62px
     }
   }
 }
