--- a/src/styles/blocks/links.scss
+++ b/src/styles/blocks/links.scss
@@ -7,10 +7,18 @@
     grid-column: 1/-1;
     gap: 20px;
     padding: 0;
+
+    @include onTablet {
+      grid-column: 2/6;
+    }
   }
 
   &__item {
     grid-column: span 1;
+
+    @include onTablet {
+      grid-column: span 3;
+    }
   }
 
   &__link {
