add normal swiper and scroll appeer effect

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -194,8 +194,9 @@
 
   &__go-up {
     position: fixed;
-    right: 5%;
-    bottom: 15%;
+    z-index: 900;
+    right: 20px;
+    bottom: 50px;
     @include flex-align-center;
     justify-content: center;
     width: 50px;
@@ -205,6 +206,8 @@
 
     @include onDesktop {
       @include scale(1.2);
+      right: 5%;
+      bottom: 10%;
     }
   }
 }
