add task solution2

--- a/src/styles/blocks/contacts.scss
+++ b/src/styles/blocks/contacts.scss
@@ -130,4 +130,13 @@
       text-decoration: none;
       color: $text-color
     }
+    &-info {
+      text-decoration: none;
+      color: $text-color;;
+
+      &__value{
+        margin: 5px 0;
+        @include hover(transform , scale(1.1))
+      }
+    }
   }
