--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -58,7 +58,7 @@
     width: 100%;
     object-fit: cover;
     cursor: pointer;
-    @include hover(transform, scale(1.1));
+    @include hover(transform, scale(1.05));
     @include onDesktop {
       height: 100%;
     }
@@ -107,9 +107,15 @@
 	gap: 15px;
 	z-index: 1;
 
-	display: flex;
+  display: flex;
 	align-items: center;
 	justify-content: center;
+
+  @media (min-width: 550px) {
+    display: none;;
+  }
+
+
 
 	a {
 		$dots-size: 8px;
