--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -63,6 +63,8 @@
       margin-top: 89px;
       margin-right: 30px;
       text-align: center;
+      cursor: pointer;
+      @include hover(transform , scale(1.1));
 
       @include onTablet {
         float:right;
