--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -62,10 +62,12 @@
 
   }
   &__sent {
-    height: 50px;
+    height: 45px;
+    cursor: pointer;
+    @include hover(transform , scale(1.1));
 
     @include onTablet {
-      height: 70px;
+      height: 65px;
     }
   }
   &__form {
@@ -78,6 +80,12 @@
 
     @include onDesktop {
       grid-column: span 5;
+    }
+
+    &_btn {
+      padding: 0;
+      background-color: #F14A27;
+      border: none;
     }
 
     &__field {
