add task solution

--- a/src/styles/subscription.scss
+++ b/src/styles/subscription.scss
@@ -89,14 +89,14 @@
       cursor: pointer;
 
       @include onTablet {
-        background: none;
-        border: none;
+        border: 1px solid #f14a27;
       }
     }
 
     @include onPhone {
       height: 50px;
       width: 50px;
+      border: 1px solid #f14a27;
     }
   }
 }
