--- a/src/styles/utils/normalize.scss
+++ b/src/styles/utils/normalize.scss
@@ -1,3 +1,10 @@
+select:-webkit-autofill:focus {
+  border: 1px solid green;
+  -webkit-text-fill-color: green;
+  -webkit-box-shadow: 0 0 0px 1000px #000 inset;
+  transition: background-color 5000s ease-in-out 0s;
+}
+
 html {
   font-family: "IBM Plex Sans", sans-serif;
   font-weight: 500;
@@ -31,4 +38,12 @@ h3,
 h4 {
   margin: 0;
   font-family: "Montserrat", sans-serif;
+}
+
+:-webkit-autofill:focus {
+  background: #fff;
+}
+
+input:-webkit-autofill:focus {
+  background: none;
 }
