--- a/src/styles/events.scss
+++ b/src/styles/events.scss
@@ -73,14 +73,23 @@
   }
 
   &__depiction {
-    @include tablet {
-      width: 100%;
-      margin-bottom: 40px;
-    }
+    transition: transform 0.3s ease;
+    transform-origin: center;
 
-    @include mobile {
-      width: 100%;
-      margin-bottom: 20px;
+    &:hover {
+      transform: scale(1.07);
+
+      @include tablet {
+        transform: none;
+        width: 100%;
+        margin-bottom: 40px;
+      }
+
+      @include mobile {
+        transform: none;
+        width: 100%;
+        margin-bottom: 20px;
+      }
     }
   }
 
@@ -152,7 +161,7 @@
     background: #f14a27;
   }
 
-  &_paragraph {
+  &__paragraph {
     font-weight: 300;
     font-size: 16px;
     line-height: 150%;
