--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -93,7 +93,7 @@
     }
   }
 
-  &_menu-puncts {
+  &__menu-puncts {
     display: flex;
     gap: 30px;
     font-weight: 500;
@@ -110,7 +110,7 @@
       gap: 28px;
       font-size: 16px;
       margin: auto;
-      padding: 27px 0 24px 72px;
+      padding: 7px 0 24px 52px;
     }
   }
 
